Hours Complete. This may be reworked in the future as I don't like it.

--- a/hours.html
+++ b/hours.html
@@ -110,9 +110,24 @@
         <div class="box">
             <h1 class="remove-spacing">Business Hours - Opening Soon!</h1>
             <hr>
-            <div class="pure-g">
-
+            <div class="pure-menu pure-menu-horizontal pure-menu-scrollable">
+                <ul class="pure-menu-list centre">
+                    <li class="pure-menu-item weekday-box">Monday <br> Closed</li>
+                    <li class="pure-menu-separator"></li>
+                    <li class="pure-menu-item weekday-box">Tuesday <br> Closed</li>
+                    <li class="pure-menu-separator"></li>
+                    <li class="pure-menu-item weekday-box">Wednesday <br> Closed</li>
+                    <li class="pure-menu-separator"></li>
+                    <li class="pure-menu-item weekday-box">Thursday <br> Closed</li>
+                    <li class="pure-menu-separator"></li>
+                    <li class="pure-menu-item weekday-box">Friday <br> Closed</li>
+                    <li class="pure-menu-separator"></li>
+                    <li class="pure-menu-item weekday-box">Saturday <br> Closed</li>
+                    <li class="pure-menu-separator"></li>
+                    <li class="pure-menu-item weekday-box">Sunday <br> Closed</li>
+                </ul>
             </div>
+            <h2>The tracks are currently closed due to construction.</h2>
         </div>
     </div>
 </div>
