Finished contact page made minor adjustments to style for forms. Fixed index with new forms

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             <div class="pure-u-sm-1-2 ">
                 <h3 class="remove-spacing">Subscribe for updates</h3>
                 <form action="#" method="POST">
-                    <input type="email" name="email" placeholder="Enter valid email" id="email" required="">
+                    <input type="email" name="email" placeholder="Enter valid email" id="subscribe" required="">
                 <br>
-                    <input type="button" value="Subscribe now" class="button">
+                    <input type="button" value="Subscribe now" class="button float-right">
                 </form>
             </div>
         </div>
