--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,55 @@
 
     <div id="main-content" class="black-background">
             <div class="box">
+                <h1 class="remove-spacing">Contact Us</h1>
+                <hr>
+                <div class="pure-g">
+                    <div class="pure-u-1">
+                        <h3 class="remove-spacing">Send us an email</h3>
+                        <form action="#" method="POST" id>
+                            <input type="text" name="name" placeholder="Name" required class="text-enter thin-box"> <div class="required">Required</div>
+                            <br>
+                            <input type="email" name="email" placeholder="Enter valid email" required class="text-enter thin-box"> <div class="required">Required</div>
+                            <br>
+                            <input type="text" name="subject" placeholder="Emails subject"  class="text-enter thin-box">
+                            <br>
+                            <textarea name="body" rows="4" cols="50" class="text-enter" placeholder="Enter your email body" required></textarea> <div class="required">Required</div>
+                            <br>
+                            <input type="submit" value="Send Email" class="button">
+                        </form>
+                        <hr>
+                    </div>
 
+
+                    <div class="pure-u-5-24 sidebar-right thin-box">
+                        <h3 class="remove-spacing">Address</h3>
+                        <hr class="remove-spacing">
+                        <address class="box-top">
+                            Joker Lane Raceway<br>
+                            test 1st street NW<br>
+                            Calgary, AB<br>
+                            Canada
+                        </address>
+                    </div>
+                    <div class="pure-u-5-24 sidebar-right thin-box">
+                        <h3 class="remove-spacing">Other Methods</h3>
+                        <hr class="remove-spacing">
+                        <div class="box-top">
+                            Email: <a href="mailto:info@jokerlaneraceway.com">info@jokerlaneraceway.com</a><br>
+                            Phone: 403-926-6399
+                        </div>
+                    </div>
+                    <div class="pure-u-5-24 sidebar-right thin-box">
+                        <h3 class="remove-spacing">Social Media</h3>
+                        <hr class="remove-spacing">
+                        <div class="box-top">
+                            <a href="#"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
+                            <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube"></a>
+                            <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter"></a>
+                            <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
+                         </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
