--- a/contact.html
+++ b/contact.html
@@ -128,34 +128,41 @@
                     </div>
 
 
-                    <div class="pure-u-5-24 sidebar-right thin-box">
-                        <h3 class="remove-spacing">Address</h3>
-                        <hr class="remove-spacing">
-                        <address class="box-top">
-                            Joker Lane Raceway<br>
-                            test 1st street NW<br>
-                            Calgary, AB<br>
-                            Canada
-                        </address>
-                    </div>
-                    <div class="pure-u-5-24 sidebar-right thin-box">
-                        <h3 class="remove-spacing">Other Methods</h3>
-                        <hr class="remove-spacing">
-                        <div class="box-top">
-                            Email: <a href="mailto:info@jokerlaneraceway.com">info@jokerlaneraceway.com</a><br>
-                            Phone: 403-926-6399
+                    <div class="pure-u-sm-6-24 thin-box">
+                        <div class="sidebar-right ">
+                            <h3 class="remove-spacing">Address</h3>
+                            <hr class="remove-spacing">
+                            <address class="box-top">
+                                Joker Lane Raceway<br>
+                                test 1st street NW<br>
+                                Calgary, AB<br>
+                                Canada
+                            </address>
                         </div>
                     </div>
-                    <div class="pure-u-5-24 sidebar-right thin-box">
-                        <h3 class="remove-spacing">Social Media</h3>
-                        <hr class="remove-spacing">
-                        <div class="box-top">
-                            <a href="#"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
-                            <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube"></a>
-                            <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter"></a>
-                            <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
+                    <div class="pure-u-sm-6-24 thin-box">
+                        <div class="sidebar-right ">
+                            <h3 class="remove-spacing">Other Methods</h3>
+                            <hr class="remove-spacing">
+                            <div class="box-top">
+                                Email: <a href="mailto:info@jokerlaneraceway.com">info@jokerlaneraceway.com</a><br>
+                                Phone: 403-926-6399
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pure-u-sm-6-24 thin-box">
+                        <div class="sidebar-right">
+                            <h3 class="remove-spacing">Social Media</h3>
+                                <hr class="remove-spacing">
+                                <div class="box-top">
+                                    <a href="#"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
+                                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube"></a>
+                                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter"></a>
+                                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
+                                </div>
                          </div>
                     </div>
+                    <!-- Needs fixing so it properly collapses-->
                 </div>
             </div>
         </div>
