--- a/gallery.html
+++ b/gallery.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="css/pure/grids-min.css">
     <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/lightbox/lightbox.css">
 
-    <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery.countdown.js"></script>
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
 
 
     <!--[if lte IE 8]>
@@ -105,8 +106,65 @@
         </ul>
     </div>
     <div id="main-content" class="black-background">
-        <div class="box">
+        <div class="box pure-g">
 
+            <div class="pure-u-1">
+                <h1 class="remove-spacing">Gallery</h1>
+                <hr>
+            </div>
+            <div class="pure-u-1 box-top">
+                <h2 class="remove-spacing">Cars</h2>
+            </div>
+
+            <div class="pure-u-1-3">
+                <a href="img/gallery/big/gallery-car1.jpg" data-lightbox="cars"><img src="img/gallery/small/gallery-car1-small.jpg" alt="Buggy on table" class="pure-img image-wrap"></a>
+            </div>
+            <div class="pure-u-1-3">
+                <a href="img/gallery/big/gallery-car2.jpg" data-lightbox="cars"><img src="img/gallery/small/gallery-car2-small.jpg" alt="Buggy on grass" class="pure-img image-wrap"></a>
+            </div>
+            <div class="pure-u-1-3">
+                <a href="img/gallery/big/gallery-car3.jpg" data-lightbox="cars"><img src="img/gallery/small/gallery-car3-small.jpg" alt="Buggy on grass" class="pure-img image-wrap"></a>
+            </div>
+            <div class="pure-u-1">
+                <div class="float-right">
+                    <a href="#"><h3 class="remove-spacing">See More</h3></a>
+                </div>
+            </div>
+
+            <div class="pure-u-1 box-top">
+                <h2 class="remove-spacing">Racing</h2>
+            </div>
+
+            <div class="pure-u-1-3">
+                <a href="img/gallery/big/gallery-racing-1.jpg" data-lightbox="cars"><img src="img/gallery/small/gallery-racing-1-small.jpg" alt="Buggys on straight" class="pure-img image-wrap"></a>
+            </div>
+            <div class="pure-u-1-3">
+                <a href="img/gallery/big/gallery-racing-2.jpg" data-lightbox="cars"><img src="img/gallery/small/gallery-racing-2-small.jpg" alt="Truggy in corner of track" class="pure-img image-wrap"></a>
+            </div>
+            <div class="pure-u-1-3">
+                <a href="img/gallery/big/gallery-racing-3.jpg" data-lightbox="cars"><img src="img/gallery/small/gallery-racing-3-small.jpg" alt="Buggy landing jump" class="pure-img image-wrap"></a>
+            </div>
+            <div class="pure-u-1">
+                <div class="float-right remove-spacing">
+                    <a href="#"><h3 class="remove-spacing">See More</h3></a>
+                </div>
+            </div>
+
+            <div class="pure-u-1 box-top">
+                <h2 class="remove-spacing">Tune Ups</h2>
+            </div>
+
+            <div class="pure-u-1-3">
+                <a href="img/booking-large-1.jpg" data-lightbox="cars"><img src="img/booking-small-1.jpg" alt="Buggys on straight" class="pure-img image-wrap"></a>
+            </div>
+            <div class="pure-u-1-3">
+                <a href="img/booking-large-3.jpg" data-lightbox="cars"><img src="img/booking-small-3.jpg" alt="Buggy landing jump" class="pure-img image-wrap"></a>
+            </div>
+            <div class="pure-u-1">
+                <div class="float-right remove-spacing">
+                    <a href="#"><h3 class="remove-spacing">See More</h3></a>
+                </div>
+            </div>
         </div>
     </div>
     </div>
