Fixed the bottom piece of the contact so that it collapses.

--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                     </div>
 
 
-                    <div class="pure-u-sm-6-24 thin-box">
+                    <div class="pure-u-1 pure-u-md-6-24 thin-box">
                         <div class="sidebar-right ">
                             <h3 class="remove-spacing">Address</h3>
                             <hr class="remove-spacing">
@@ -140,7 +140,7 @@
                             </address>
                         </div>
                     </div>
-                    <div class="pure-u-sm-6-24 thin-box">
+                    <div class="pure-u-1 pure-u-md-6-24 thin-box">
                         <div class="sidebar-right ">
                             <h3 class="remove-spacing">Other Methods</h3>
                             <hr class="remove-spacing">
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pure-u-sm-6-24 thin-box">
+                    <div class="pure-u-1 pure-u-md-6-24 thin-box">
                         <div class="sidebar-right">
                             <h3 class="remove-spacing">Social Media</h3>
                                 <hr class="remove-spacing">
@@ -161,6 +161,9 @@
                                     <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
                                 </div>
                          </div>
+                    </div>
+                    <div class="pure-u-1 pure-u-md-6-24">
+
                     </div>
                     <!-- Needs fixing so it properly collapses-->
                 </div>
