--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             </script>-->
             <div id="push-down">
                 <span id="social-media">
-                    <a href="#"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
+                    <a href="https://www.facebook.com/pages/AKA-Racing-Team/585982068209490"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
                     <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube"></a>
                     <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter"></a>
                     <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
@@ -155,7 +155,7 @@
                             <h3 class="remove-spacing">Social Media</h3>
                                 <hr class="remove-spacing">
                                 <div class="box-top">
-                                    <a href="#"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
+                                    <a href="https://www.facebook.com/pages/AKA-Racing-Team/585982068209490"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
                                     <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube"></a>
                                     <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter"></a>
                                     <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
