Events page finished this will probably be modified to hold events effectively.

--- a/events.html
+++ b/events.html
@@ -106,7 +106,16 @@
     </div>
     <div id="main-content" class="black-background">
         <div class="box">
-
+            <h1 class="remove-spacing">Joker Lane Raceway Events</h1>
+            <hr>
+            <div class="align-centre">
+                <form action="#" method="POST">
+                    <span id="email-subscribe">Subscribe for Updates</span><input type="email" name="email" placeholder="Enter valid email" id="email" class="text-enter" required >
+                    <input type="submit" value="Subscribe now" class="button">
+                </form>
+            </div>
+            <hr>
+            <h2 class="remove-spacing align-centre">We Currently have noe events at Joker Lane Raceway.<br> Please Stay tuned!</h2>
         </div>
     </div>
 </div>
