--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <form action="#" method="POST">
                     <input type="email" name="email" placeholder="Enter valid email" id="subscribe" required="">
                 <br>
-                    <input type="button" value="Subscribe now" class="button float-right">
+                    <input type="submit" value="Subscribe now" class="button float-right">
                 </form>
             </div>
         </div>
