Fixed some bugs with the header

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <div class="pure-u-1 pure-u-sm-1 pure-u-md-2-5 ">
             <a href="index.html"><img src="img/logo.png" alt="Joker Lane Raceway" class="pure-img"></a>
         </div>
-        <div class="pure-u-sm-1 pure-u-md-3-5">
+        <div class="pure-u-1 pure-u-sm-1 pure-u-md-3-5">
             <!--<h1 id="sneak-peak">Sneak Peak In!</h1>
              <span id="countdown" ></span>
              <script type="text/javascript">
@@ -68,9 +68,9 @@
             <div id="push-down">
                 <span id="social-media">
                     <a href="https://www.facebook.com/pages/AKA-Racing-Team/585982068209490"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
-                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube"></a>
-                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter"></a>
-                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
+                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube" class="hidden"></a>
+                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter" class="hidden"></a>
+                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram" class="hidden"></a>
                 </span>
                 <div class="clear"></div>
                 <div id="nav" class="pure-menu pure-menu-horizontal pure-menu-scrollable">
@@ -156,9 +156,9 @@
                                 <hr class="remove-spacing">
                                 <div class="box-top">
                                     <a href="https://www.facebook.com/pages/AKA-Racing-Team/585982068209490"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
-                                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube"></a>
-                                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter"></a>
-                                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
+                                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube" class="hidden"></a>
+                                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter" class="hidden"></a>
+                                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram" class="hidden"></a>
                                 </div>
                          </div>
                     </div>
