--- a/pro-shop.html
+++ b/pro-shop.html
@@ -106,7 +106,22 @@
     </div>
     <div id="main-content" class="black-background">
         <div class="box">
+            <div class="pure-g">
+                <div class="pure-u-1">
+                    <h1 class="remove-spacing">Pro Shop</h1>
+                    <hr>
+                </div>
 
+                <div class="pure-u-1-2">
+                    <p>More information will come in time. We will be selling everyting to do with RC cars. Our shop will stock top of the line parts and everything you need to upgrade your RC car.</p>
+                    <div id="fill-box">
+                        <div class="box" id="coming-soon">COMING SOON</div>
+                    </div>
+                </div>
+                <div class="pure-u-1-2">
+                    <img src="img/cars.jpg" alt="Boxed cars under reddy sign" class="pure-img image-wrap">
+                </div>
+            </div>
         </div>
     </div>
 </div>
