--- a/bookings.html
+++ b/bookings.html
@@ -55,7 +55,7 @@
         <div class="pure-u-1 pure-u-sm-1 pure-u-md-2-5 ">
             <a href="index.html"><img src="img/logo.png" alt="Joker Lane Raceway" class="pure-img"></a>
         </div>
-        <div class="pure-u-sm-1 pure-u-md-3-5">
+        <div class="pure-u-1 pure-u-sm-1 pure-u-md-3-5">
             <!--<h1 id="sneak-peak">Sneak Peak In!</h1>
              <span id="countdown" ></span>
              <script type="text/javascript">
@@ -69,9 +69,9 @@
             <div id="push-down">
                 <span id="social-media">
                     <a href="https://www.facebook.com/pages/AKA-Racing-Team/585982068209490"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
-                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube"></a>
-                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter"></a>
-                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram"></a>
+                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube" class="hidden"></a>
+                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter" class="hidden"></a>
+                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram" class="hidden"></a>
                 </span>
                 <div class="clear"></div>
                 <div id="nav" class="pure-menu pure-menu-horizontal pure-menu-scrollable">
@@ -108,7 +108,7 @@
 
     <div id="main-content" class="black-background">
         <div class="box">
-            <h1>Bookings</h1>
+            <h1 class="remove-spacing">Bookings</h1>
             <hr class="dashed">
             <p>The newest greatest birthday party venue in Calgary!<br>
                 Joker Lane Raceway Party Events really bring party to life!
