Finished the Race team page just needs individual driver pages to finish. I'll only do one for similar reasons as the calendar since it will have a lot of unnecessary repetition if its going into a cms

--- a/pro-team.html
+++ b/pro-team.html
@@ -106,12 +106,133 @@
     </div>
     <div id="main-content" class="black-background">
         <div class="box">
+            <div class="body-header pure-g">
+                <div class="pure-u-1">
+                    <h1 class="remove-spacing">AKA Racing Team Members</h1>
+                    <hr>
+            </div>
 
+            <div class="remove-spacing pure-g">
+                <div id="upcoming-race" class="pure-u-1 pure-u-sm-17-24">
+                    <div class="box sidebar-right">
+                        <div class="pure-g">
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/rachel.jpg" alt="Rachel Timmermans" class="pure-img image-wrap "></a>
+                                <h4 class="remove-spacing">Team Manager - Rachel Timmermans</h4>
+                                <div class="remove-spacing">Calgary, AB</div>
+                            </div>
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/russ.jpg" alt="Russ Anderson" class="pure-img image-wrap"></a>
+                                <h4 class="remove-spacing">Team Driver - Russ Anderson</h4>
+                                <div class="remove-spacing">Lloydminster, AB</div>
+                            </div>
+
+                        </div>
+
+                        <div class="pure-g">
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/greg.jpg" alt="Greg Burke" class="pure-img image-wrap"></a>
+                                <h4 class="remove-spacing">Team Driver - Greg Burke</h4>
+                                <div class="remove-spacing">Calgary, AB</div>
+                            </div>
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/micheal.jpg" alt="Micheal Leclair" class="pure-img image-wrap"></a>
+                                <h4 class="remove-spacing">Team Driver - Micheal Leclair</h4>
+                                <div class="remove-spacing">Calgary, AB</div>
+                            </div>
+
+                        </div>
+
+                        <div class="pure-g">
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/dan.jpg" alt="Dan Unrau" class="pure-img image-wrap"></a>
+                                <h4 class="remove-spacing">Team Driver - Dan Unrau</h4>
+                                <div class="remove-spacing">Cranbrook, BC</div>
+                            </div>
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/austin.jpg" alt="Austin Berthelot" class="pure-img image-wrap"></a>
+                                <h4 class="remove-spacing">Team Driver - Austin Berthelot</h4>
+                                <div class="remove-spacing">Calgary, AB</div>
+                            </div>
+
+                        </div>
+
+                        <div class="pure-g">
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/generic.jpg" alt="Curtis Webster" class="pure-img image-wrap"></a>
+                                <h4 class="remove-spacing">Team Driver - Curtis Webster</h4>
+                                <div class="remove-spacing">Calgary, AB</div>
+                            </div>
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/generic.jpg" alt="Brian Timmermans" class="pure-img image-wrap"></a>
+                                <h4 class="remove-spacing">Team Driver - Brian Timmermans</h4>
+                                <div class="remove-spacing">Calgary, AB</div>
+                            </div>
+
+                        </div>
+
+                        <div class="pure-g">
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+                                <a href="#"><img src="img/drivers/generic.jpg" alt="Navaz Walji" class="pure-img image-wrap"></a>
+                                <h4 class="remove-spacing">Team Driver - Navaz Walji</h4>
+                                <div class="remove-spacing">Calgary, AB</div>
+                            </div>
+                            <div class="pure-u-1 pure-u-md-1-2 box-top">
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="pure-u-1 pure-u-sm-7-24 ">
+                    <div class=" box">
+                        <h2 class="remove-spacing">Racing Reports</h2>
+                        <hr class="dashed">
+
+                        <div>
+                            <h3 class="remove-spacing">Race Title</h3>
+                            <span class="event-text remove-spacing">July 29-30, 2015 - </span>
+                            <span class="event-text remove-spacing">Calgary, AB, CA</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, vix ad euismod scriptorem. Quo prodesset dissentiet et, pri ea nostro utamur maiorum. Legendos comprehensam vis eu, no sed illum concludaturque. Eos eu reque saperet epicurei, sed ad nobis platonem iudicabit. Modus reformidans usu ei.
+                            </p>
+                        </div>
+                        <hr>
+                        <div>
+                            <h3 class="remove-spacing">Race Title</h3>
+                            <span class="event-text remove-spacing">July 29-30, 2015 - </span>
+                            <span class="event-text remove-spacing">Calgary, AB, CA</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, vix ad euismod scriptorem. Quo prodesset dissentiet et, pri ea nostro utamur maiorum. Legendos comprehensam vis eu, no sed illum concludaturque. Eos eu reque saperet epicurei, sed ad nobis platonem iudicabit. Modus reformidans usu ei.
+                            </p>
+                        </div>
+                        <hr>
+                        <div>
+                            <h3 class="remove-spacing">Race Title</h3>
+                            <span class="event-text remove-spacing">July 29-30, 2015 - </span>
+                            <span class="event-text remove-spacing">Calgary, AB, CA</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, vix ad euismod scriptorem. Quo prodesset dissentiet et, pri ea nostro utamur maiorum. Legendos comprehensam vis eu, no sed illum concludaturque. Eos eu reque saperet epicurei, sed ad nobis platonem iudicabit. Modus reformidans usu ei.
+                            </p>
+                        </div>
+                        <hr>
+                        <div>
+                            <h3 class="remove-spacing">Race Title</h3>
+                            <span class="event-text remove-spacing">July 29-30, 2015 - </span>
+                            <span class="event-text remove-spacing">Calgary, AB, CA</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, vix ad euismod scriptorem. Quo prodesset dissentiet et, pri ea nostro utamur maiorum. Legendos comprehensam vis eu, no sed illum concludaturque. Eos eu reque saperet epicurei, sed ad nobis platonem iudicabit. Modus reformidans usu ei.
+                            </p>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
         </div>
     </div>
 </div>
-
-
+</div>
+</div>
 
 </body>
 </html>
