Added body to prodriver page

--- a/pro-driver.html
+++ b/pro-driver.html
@@ -104,6 +104,11 @@
             <li class="pure-menu-item"><a href="pro-team.html" class="navigate pure-menu-link">AKA Racing Team</a></li>
         </ul>
     </div>
+
+    <div id="main-content" class="black-background">
+        <div class="box">
+            </div>
+        </div>
     </div>
 
 </body>
