Prodriver page complete. Only one done again for repetition purposes.

--- a/pro-team.html
+++ b/pro-team.html
@@ -117,13 +117,13 @@
                     <div class="box sidebar-right">
                         <div class="pure-g">
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/rachel.jpg" alt="Rachel Timmermans" class="pure-img image-wrap "></a>
-                                <h4 class="remove-spacing">Team Manager - Rachel Timmermans</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/rachel.jpg" alt="Rachel Timmermans" class="pure-img image-wrap ">
+                                <h4 class="remove-spacing">Team Manager - Rachel Timmermans</h4></a>
                                 <div class="remove-spacing">Calgary, AB</div>
                             </div>
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/russ.jpg" alt="Russ Anderson" class="pure-img image-wrap"></a>
-                                <h4 class="remove-spacing">Team Driver - Russ Anderson</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/russ.jpg" alt="Russ Anderson" class="pure-img image-wrap">
+                                <h4 class="remove-spacing">Team Driver - Russ Anderson</h4></a>
                                 <div class="remove-spacing">Lloydminster, AB</div>
                             </div>
 
@@ -131,13 +131,13 @@
 
                         <div class="pure-g">
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/greg.jpg" alt="Greg Burke" class="pure-img image-wrap"></a>
-                                <h4 class="remove-spacing">Team Driver - Greg Burke</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/greg.jpg" alt="Greg Burke" class="pure-img image-wrap">
+                                <h4 class="remove-spacing">Team Driver - Greg Burke</h4></a>
                                 <div class="remove-spacing">Calgary, AB</div>
                             </div>
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/micheal.jpg" alt="Micheal Leclair" class="pure-img image-wrap"></a>
-                                <h4 class="remove-spacing">Team Driver - Micheal Leclair</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/micheal.jpg" alt="Micheal Leclair" class="pure-img image-wrap">
+                                <h4 class="remove-spacing">Team Driver - Micheal Leclair</h4></a>
                                 <div class="remove-spacing">Calgary, AB</div>
                             </div>
 
@@ -145,13 +145,13 @@
 
                         <div class="pure-g">
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/dan.jpg" alt="Dan Unrau" class="pure-img image-wrap"></a>
-                                <h4 class="remove-spacing">Team Driver - Dan Unrau</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/dan.jpg" alt="Dan Unrau" class="pure-img image-wrap">
+                                <h4 class="remove-spacing">Team Driver - Dan Unrau</h4></a>
                                 <div class="remove-spacing">Cranbrook, BC</div>
                             </div>
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/austin.jpg" alt="Austin Berthelot" class="pure-img image-wrap"></a>
-                                <h4 class="remove-spacing">Team Driver - Austin Berthelot</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/austin.jpg" alt="Austin Berthelot" class="pure-img image-wrap">
+                                <h4 class="remove-spacing">Team Driver - Austin Berthelot</h4></a>
                                 <div class="remove-spacing">Calgary, AB</div>
                             </div>
 
@@ -159,13 +159,13 @@
 
                         <div class="pure-g">
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/generic.jpg" alt="Curtis Webster" class="pure-img image-wrap"></a>
-                                <h4 class="remove-spacing">Team Driver - Curtis Webster</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/generic.jpg" alt="Curtis Webster" class="pure-img image-wrap">
+                                <h4 class="remove-spacing">Team Driver - Curtis Webster</h4></a>
                                 <div class="remove-spacing">Calgary, AB</div>
                             </div>
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/generic.jpg" alt="Brian Timmermans" class="pure-img image-wrap"></a>
-                                <h4 class="remove-spacing">Team Driver - Brian Timmermans</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/generic.jpg" alt="Brian Timmermans" class="pure-img image-wrap">
+                                <h4 class="remove-spacing">Team Driver - Brian Timmermans</h4></a>
                                 <div class="remove-spacing">Calgary, AB</div>
                             </div>
 
@@ -173,8 +173,8 @@
 
                         <div class="pure-g">
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
-                                <a href="#"><img src="img/drivers/generic.jpg" alt="Navaz Walji" class="pure-img image-wrap"></a>
-                                <h4 class="remove-spacing">Team Driver - Navaz Walji</h4>
+                                <a href="pro-driver.html" class="remove-underline"><img src="img/drivers/generic.jpg" alt="Navaz Walji" class="pure-img image-wrap">
+                                <h4 class="remove-spacing">Team Driver - Navaz Walji</h4></a>
                                 <div class="remove-spacing">Calgary, AB</div>
                             </div>
                             <div class="pure-u-1 pure-u-md-1-2 box-top">
