--- a/pro-driver.html
+++ b/pro-driver.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="css/pure/grids-min.css">
     <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/lightbox/lightbox.css">
 
-    <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery.countdown.js"></script>
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
 
 
     <!--[if lte IE 8]>
@@ -107,9 +108,131 @@
 
     <div id="main-content" class="black-background">
         <div class="box">
+            <div class="pure-g">
+                <div class="pure-u-1">
+                    <h1 class="remove-spacing">Rachel Timmermans - Calgary, AB</h1>
+                    <hr>
+                </div>
+                <div class="pure-u-1-3">
+                    <a href="#gallery" class="remove-underline">
+                    <div class="align-centre box driver-box">
+                        <h3 class="remove-spacing">Gallery</h3>
+                    </div>
+                    </a>
+                </div>
+                <div class="pure-u-1-3">
+                    <a href="#setup" class="remove-underline ">
+                    <div class="align-centre box driver-box menu-spacing">
+                        <h3 class="remove-spacing">Setup Sheets</h3>
+                    </div>
+                    </a>
+                </div>
+                <div class="pure-u-1-3">
+                    <a href="#social" class="remove-underline">
+                    <div class="align-centre box driver-box">
+                        <h3 class="remove-spacing">Follow Me </h3>
+                    </div>
+                    </a>
+                </div>
+
+                <div class="pure-u-1 align-centre">
+                    <div class="box-top">
+                        <img src="img/drivers/rachel/rachel-driver-page-1.jpg" alt="Rachel holding radio box and 1/10 buggy">
+                    </div>
+                    <hr>
+                </div>
+                <div class="pure-u-1">
+                    <h2 class="remove-spacing">About</h2>
+                    <h3 class="remove-spacing ">How long have you been racing RC Cars?</h3>
+                    <p class="remove-spacing">I have been racing for about 4 years now, since 2011.</p>
+                    <h3 class="remove-spacing box-top">What is your favorite thing about RC Racing?</h3>
+                    <p class="remove-spacing">I really like the racing. Main events where the pressure is on and it's all on the line. But I also really like the community.
+                        Most guys are willing to give a helping hand to other racers, parts and other tips they may need. It's nice to see people not letting competitiveness get in the way always.</p>
+                    <h3 class="remove-spacing box-top">How would you describe your driving style?</h3>
+                    <p class="remove-spacing">Smooth but punched. My number one goal is to not crash going around the track. But I like to push how fast I can drive my car around sweepers and coming up to jumps.</p>
+                    <h3 class="remove-spacing box-top">What is your favorite class to drive?</h3>
+                    <p class="remove-spacing">My favourite class to run is 1/8 buggy. It changes on the day whether it's electric or nitro.</p>
+                    <h3 class="remove-spacing box-top">What are your future goals in RC Racing?</h3>
+                    <p class="remove-spacing">I am and always will be about the fun of the hobby. Although one day it would be very cool to compete in a national or even world event. For now I'm just focusing on doing well at a local level.</p>
+
+                    <div class="box-top" id="social">
+                        <a href="https://instagram.com/sandvichmaking/"><img src="img/Instagram-white-small.png" alt="Instagram" class=""></a>
+                    </div>
+                    <hr>
+                </div>
+                <div class="pure-u-1">
+                    <h2 class="remove-spacing">Additional Sponsors</h2>
+                    <div class="highlight align-centre">
+                        <img src="img/hot-bodies-logo.png" alt="Hot Bodies">
+                        <img src="img/proline.jpg" alt="Proline">
+                        <img src="img/mattox-designs.jpg" alt="Mattox Designs">
+                    </div>
+                    <hr>
+                </div>
+                <div id="gallery">
+                    <div class="pure-u-1">
+                        <h2 class="remove-spacing">Gallery</h2>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-2.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-2.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-3.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-3.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-4.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-4.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-5.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-5.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-6.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-6.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-7.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-7.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-8.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-8.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-9.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-9.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-5">
+                        <div class="box">
+                            <a href="img/drivers/rachel/rachel-driver-page-10.jpg" data-lightbox="Rachel"><img src="img/drivers/rachel/rachel-driver-page-10.jpg" class="pure-img image-wrap"> </a>
+                        </div>
+                    </div>
+
+                    <hr>
+                </div>
+                <div id="setup">
+                    <div class="pure-u-1">
+                        <h2 class="remove-spacing">Setup Sheets</h2>
+                        <div id="setup-placeholder">
+                            <div id="coming-soon" class="min-height">Coming Soon</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+</div>
 
 </body>
 </html>
