--- a/pro-driver.html
+++ b/pro-driver.html
@@ -232,6 +232,19 @@
             </div>
         </div>
     </div>
+    <div id="footer" class="black-background">
+        <div class="box">
+            &copy; Joker Lane Raceway All rights Reserved.
+            <div class="float-right">
+                <span>
+                    <a href="https://www.facebook.com/pages/AKA-Racing-Team/585982068209490"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
+                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube" class="hidden"></a>
+                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter" class="hidden"></a>
+                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram" class="hidden"></a>
+                </span>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
