--- a/events.html
+++ b/events.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A remake of the Joker Lane Raceway site">
@@ -116,6 +115,19 @@
             </div>
             <hr>
             <h2 class="remove-spacing align-centre">We Currently have no events at Joker Lane Raceway.<br> Please Stay tuned!</h2>
+        </div>
+    </div>
+    <div id="footer" class="black-background">
+        <div class="box">
+            &copy; Joker Lane Raceway All rights Reserved.
+            <div class="float-right">
+                <span>
+                    <a href="https://www.facebook.com/pages/AKA-Racing-Team/585982068209490"><img src="img/FB-f-Logo__white_29.png" alt="Facebook"></a>
+                    <a href="#"><img src="img/YouTube-logo-light-small.png" alt="Youtube" class="hidden"></a>
+                    <a href="#"><img src="img/Twitter_logo_white_Small.png" alt="Twitter" class="hidden"></a>
+                    <a href="#"><img src="img/Instagram-white-small.png" alt="Instagram" class="hidden"></a>
+                </span>
+            </div>
         </div>
     </div>
 </div>
