Added Favicon to pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="js/jquery-2.1.4.js"></script>
     <script src="js/jquery.countdown.js"></script>
 
+    <link rel="icon" type="image/png" href="img/favicon.png">
 
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/layouts/side-menu-old-ie.css">
@@ -34,7 +35,7 @@
 </head>
 <body>
 <div id="content-container" >
-<div id="preferred-brands">
+<div id="preferred-brands" class="hidden">
     <div class="centre">
 
         <img src="img/hudy.jpg" alt="Hudy" class="pure-img inline">
