--- a/bookings.html
+++ b/bookings.html
@@ -18,7 +18,7 @@
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/lightbox.min.js"></script>
 
-
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="css/layouts/side-menu-old-ie.css">
     <![endif]-->
