--- a/calendar.html
+++ b/calendar.html
@@ -17,7 +17,7 @@
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/jquery.countdown.js"></script>
 
-
+    <link rel="icon" type="image/png" href="img/favicon.png">
 <!--[if lte IE 8]>
 <link rel="stylesheet" href="css/layouts/side-menu-old-ie.css">
 <![endif]-->
