Changed a hidden element

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div id="content-container" >
-<div id="preferred-brands" class="hidden">
+<div id="preferred-brands" >
     <div class="centre">
 
         <img src="img/hudy.jpg" alt="Hudy" class="pure-img inline">
