--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
 </div>
 
 <div id="welcome" class="pure-g black-background">
-    <div class="pure-u-sm-1-2">
+    <div class="pure-u-1 pure-u-sm-1-2">
         <div class="box ">
             <h1 id="welcome-left" class="centre">Welcome</h1>
             <p class="remove-spacing">To Calgary's first indoor off-road RC race track.</p>
         </div>
     </div>
-    <div class="pure-u-sm-1-2 ">
+    <div class="pure-u-1 pure-u-sm-1-2 ">
     </div>
 </div>
 <div id="main-content" class="black-background">
     <div class="box">
         <div class="body-header pure-g">
-            <div class="pure-u-sm-1-2">
+            <div class="pure-u-1 pure-u-sm-1-2">
                 <h1 class="remove-spacing">Latest News</h1>
             </div>
-            <div class="pure-u-sm-1-2 ">
+            <div class="pure-u-1 pure-u-sm-1-2 ">
                 <h3 class="remove-spacing">Subscribe for updates</h3>
                 <form action="#" method="POST">
                     <input type="email" name="email" placeholder="Enter valid email" id="subscribe" required="">
