Fixing some bugs with the style

--- a/track-info.html
+++ b/track-info.html
@@ -112,7 +112,7 @@
             </div>
             <hr>
             <div class="remove-spacing pure-g">
-                <div id="upcoming-race" class="pure-u-sm-4-5">
+                <div id="upcoming-race" class="pure-u-1 pure-u-sm-4-5">
                     <div class="box sidebar-right">
                             <div>
                                 <h3 class="remove-spacing">Race Title</h3>
@@ -162,7 +162,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="pure-u-sm-1-5 ">
+                <div class="pure-u-1 pure-u-sm-1-5 ">
                     <div class=" box">
                         <div>
                             <a href="img/gears-track-2014-large.jpg" data-lightbox="track-photo"><img src="img/gears-track-2014.jpg" alt="club picture" class="pure-img image-wrap"></a>
