Fixing bug with image not scaling.

--- a/pro-driver.html
+++ b/pro-driver.html
@@ -136,7 +136,7 @@
 
                 <div class="pure-u-1 align-centre">
                     <div class="box-top">
-                        <img src="img/drivers/rachel/rachel-driver-page-1.jpg" alt="Rachel holding radio box and 1/10 buggy">
+                        <img src="img/drivers/rachel/rachel-driver-page-1.jpg" alt="Rachel holding radio box and 1/10 buggy" class="pure-img centre">
                     </div>
                     <hr>
                 </div>
