--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="css/pure/grids-min.css">
     <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/lightbox/lightbox.css">
 
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
 
     <link rel="icon" type="image/png" href="img/favicon.png">
 
